// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article list 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 15,
            }
          }
        >
          <Card>
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#636C17",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 1.2,
                      "marginBottom": 0,
                    }
                  }
                >
                  L A B E L   1
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "lineHeight": 22,
                    "marginBottom": 5,
                  }
                }
              >
                Headline 1
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  
                  Summary 1
                  ...
                </Text>
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </Text>
            </View>
          </Card>
        </View>
      </Link>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
            }
          }
        />
      </View>
    </View>
    <View>
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 15,
            }
          }
        >
          <Card>
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#333333",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 1.2,
                      "marginBottom": 0,
                    }
                  }
                >
                  L A B E L   2
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "lineHeight": 22,
                    "marginBottom": 5,
                  }
                }
              >
                Headline 2
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  
                  Summary 2
                  ...
                </Text>
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Sunday Times
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                <Text>
                  Byline 2
                </Text>
              </Text>
            </View>
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
            }
          }
        />
        <ActivityIndicator
          style={
            Object {
              "paddingVertical": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. article list with no images 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 15,
            }
          }
        >
          <Card>
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#636C17",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 1.2,
                      "marginBottom": 0,
                    }
                  }
                >
                  L A B E L   1
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "lineHeight": 22,
                    "marginBottom": 5,
                  }
                }
              >
                Headline 1
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  
                  Short summary 1
                  ...
                </Text>
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </Text>
            </View>
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
            }
          }
        />
        <ActivityIndicator
          style={
            Object {
              "paddingVertical": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. a retry button when load more fails 1`] = `
<RCTScrollView>
  <View>
    <View>
      <Link>
        <View
          style={
            Object {
              "paddingBottom": 15,
              "paddingLeft": 10,
              "paddingRight": 10,
              "paddingTop": 15,
            }
          }
        >
          <Card>
            <View>
              <View
                style={
                  Object {
                    "marginBottom": 5,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#636C17",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 12,
                      "fontWeight": "400",
                      "letterSpacing": 1.2,
                      "marginBottom": 0,
                    }
                  }
                >
                  L A B E L   1
                </Text>
              </View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "lineHeight": 22,
                    "marginBottom": 5,
                  }
                }
              >
                Headline 1
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text>
                  
                  Summary 1
                  ...
                </Text>
              </Text>
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 5,
                  }
                }
              >
                Friday November 17 2017, 12:01am, The Times
              </Text>
            </View>
          </Card>
        </View>
      </Link>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "height": 1,
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "center",
              "padding": 25,
              "width": "100%",
            }
          }
        >
          <Button />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
